--- a/src/Entrega 3/Frontend/pick-your-driver/package.json
+++ b/src/Entrega 3/Frontend/pick-your-driver/package.json
@@ -9,9 +9,14 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "assert": "^2.1.0",
     "bootstrap": "^5.3.6",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "html-webpack-plugin": "^5.6.3",
+    "https-browserify": "^1.0.0",
+    "process": "^0.11.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-google-places-autocomplete": "^4.1.0",
@@ -21,6 +26,8 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "styled-components": "^6.1.16",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
