--- a/src/Entrega 3/Frontend/pick-your-driver/package.json
+++ b/src/Entrega 3/Frontend/pick-your-driver/package.json
@@ -20,6 +20,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-google-places-autocomplete": "^4.1.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "react-vlibras": "^2.3.4",
